# ekimetrics-task

./: movies.xlsx  notes.md
movies-ml/: .gitignore  lgbmreg.sav  lreg.sav  pyproject.toml
movies-ml/db/: connect.py  latest.xlsx  movies.xlsx
movies-ml/db/monthly/: 2023-03-27.xlsx
movies-ml/movies_ml/: features.py  main.py
research/: .gitignore  Modelling-Copy1.ipynb  Untitled.ipynb  main.ipynb  my_data.xlsx  notes.md  omdb_data.json  omdb_data_lowercase.json  revised.ipynb  trends_data.json  trends_data_1.json  trends_data_2.json
research/.ipynb_checkpoints/: Modelling-Copy1-checkpoint.ipynb
